--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>Title</h1>
+    <h1>TITLE</h1>
+
+    <% names.forEach(function(element) { %>
+        <div><%= element %></div>
+    <% }); %>
+    
+    <form action="/submit" method="POST">
+        <input type="text" name="post1">
+        <input type="submit">
+    </form>
 </body>
 </html>
